--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ header {
 
 main {
   box-sizing: border-box;
-  border: solid #D0A718 10px;
+  border: solid #1868d0 10px;
   border-radius: 10px;
   padding: 5px;
   margin: 50px;
@@ -47,10 +47,6 @@ p {
   padding: 15px;
 }
 
-iframe {
-  display: block;
-  align-items: center;
-}
 
 section {
   text-align: center;
@@ -60,24 +56,7 @@ section {
 button {
   margin: 20px;
 }
-.custom-btn {
-  width: 130px;
-  height: 40px;
-  color: #fff;
-  border-radius: 5px;
-  padding: 10px 25px;
-  font-family: 'Lato', sans-serif;
-  font-weight: 500;
-  background: transparent;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  position: relative;
-  display: inline-block;
-   box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
-   7px 7px 20px 0px rgba(0,0,0,.1),
-   4px 4px 5px 0px rgba(0,0,0,.1);
-  outline: none;
-}
+
 
 
 a   {
@@ -88,8 +67,10 @@ h2 {
   padding: 50px;
 }
 
+.xbox {
+  margin: 50px;
+}
 
 footer {
-    background-color: blue;
     text-align: center;
 }
